Added GPLv3 link.

--- a/views/wiki.ejs
+++ b/views/wiki.ejs
@@ -18,7 +18,8 @@
         <b>My line of "A" projects are below...</b><br>
         <a href="https://github.com/c-apex/A-Bot">A-Bot</a><br>
         <a href="https://github.com/c-apex/A-Wiki">A-Wiki</a><br>
-        <a href="https://github.com/c-apex/A-Share">A-Share</a>
+        <a href="https://github.com/c-apex/A-Share">A-Share</a><br>
+        <a class="text-muted" href="https://choosealicense.com/licenses/gpl-3.0/">I choose <b>GNU GPL 3.0</b> because I believe in improvements by and for all.</a>
         <hr>
         <b>My tangents on various topics are available below...</b>
       <% for (post of posts) { %>
