Added A-Share link.

--- a/views/wiki.ejs
+++ b/views/wiki.ejs
@@ -15,6 +15,9 @@
         <h1>Hello, I'm a user who goes by <b>Apex</b>.</h1>
         <h4>Welcome to my side of the internet!</h4>
         <hr>
+        <b>File sharing via A-Share...</b><br>
+        <a style="color:FireBrick;" href="https://share.capex.me">A-Share</a><br>
+        <hr>
         <b>My line of "A" projects are below...</b><br>
         <a href="https://github.com/c-apex/A-Bot">A-Bot</a><br>
         <a href="https://github.com/c-apex/A-Wiki">A-Wiki</a><br>
