--- a/poll/public/index.ejs
+++ b/poll/public/index.ejs
@@ -8,24 +8,23 @@
 <body>
 <div class="jumbotron" id="header">
 <main>
-<h3>A-Poll is my personal build of my 1of2from30. It works as a simple polling platform built on JavaScript that queries all questions and "sides" from a JSON file. To find out more, visit 1of2from30 on GitHub.</h3>
+<h3>A-Poll</h3>
+  <hr>
+  <p class="text-center text-muted"><b>This is my personal build of my 1of2from30. It works as a simple polling platform built on JavaScript that queries all questions and "sides" from a JSON file. To find out more, visit 1of2from30 on GitHub.</b></p>
+  <p class="text-center text-muted">
   <a href="https://github.com/c-apex/1of2from30">
     <img src="https://i.imgur.com/1T2fKvp.png" alt="GitHub" style="width:42px;height:42px;">
   </a>
-</main>
-</div>
-<br>
-<div class="jumbotron" id="header">
-<hr>
-<main>
+  </p>
   <div class="jumbotron">
+    <hr>
   <form action="/pollselect" method="post">
       <div>
         <br>
         <label><b>Please enter the ID of the poll you wish to participate in.</b></label>
         <br>
         <input type="text" name="pollid"/><br>
-        <hr>
+        <br>
         <input class="btn btn-primary" type="submit" value="Load"/>
       </div>
     </form>
