Updated the website UI

--- a/read/views/index.ejs
+++ b/read/views/index.ejs
@@ -20,7 +20,7 @@
         <div class="jumbotron">
           <%- post %>
           <hr>
-          <a href="/" class="text-center text-muted"><h2>Home</h2></a>
+          <a href="/" class="text-center text-muted"><h2>Back</h2></a>
         </div>
       </main>
     </div>
