--- a/share/views/index.ejs
+++ b/share/views/index.ejs
@@ -36,6 +36,7 @@
       </div>
     </form>
   </div>
+  <a href="https://capex.me" class="text-center text-muted"><h2>Home</h2></a>
   <p class="text-center text-muted"><small>Uploaded files are occasionally purged and furthermore are subject to manual deletion. The host bears no liability for files uploaded and distributed through A-Share, an open source project.</small><br>
   <p class="text-center text-muted"><small>If you suspect this application is being abused, please contact the email associated with this site's administrator.</small>
 
