--- a/read/views/index.ejs
+++ b/read/views/index.ejs
@@ -7,7 +7,7 @@
     <meta property="og:url" content="capex.me">
     <meta property="og:description" content="<%= description %>">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://capex.me/assets/b-read.png">
   </head>
   <body>
     <div id="wiki">
