--- a/read/views/wiki.ejs
+++ b/read/views/wiki.ejs
@@ -7,7 +7,7 @@
     <meta property="og:url" content="">
     <meta property="og:description" content="Welcome to my corner of the internet.">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://capex.me/assets/b-read.png">
   </head>
   <body>
     <div id="wiki">
