--- a/share/views/index.ejs
+++ b/share/views/index.ejs
@@ -8,7 +8,7 @@
   <meta property="og:url" content="">
   <meta property="og:description" content="Share your files and delete them with a randomly generated OTP.">
   <meta property="og:type" content="article">
-  <meta property="og:image" content="">
+  <meta property="og:image" content="https://capex.me/assets/b-share.png">
 </head>
 <body>
   <div class="jumbotron">
