Standardized embeds across different parts of the site.

--- a/main/views/home.ejs
+++ b/main/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>C-Apex - Home</title>
+  <title>C-Apex -- Home</title>
   <meta property="og:type" content="article">
   <meta property="og:title" content="C-Apex -- Home">
   <meta property="og:url" content="https://capex.me/">
