--- a/share/views/index.ejs
+++ b/share/views/index.ejs
@@ -1,15 +1,15 @@
 <html lang="en">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>C-Apex - Share</title>
-  <meta property="og:title" content="A-Share">
-  <meta property="og:site_name" content="">
-  <meta property="og:url" content="">
-  <meta property="og:description" content="Share your files and delete them with a randomly generated OTP.">
-  <meta property="og:type" content="article">
-  <meta property="og:image" content="https://capex.me/assets/b-share.png">
-</head>
+    <title>C-Apex -- Share</title>
+    <meta property="og:title" content="C-Apex -- Share">
+    <meta property="og:site_name" content="">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="Share your files and delete them with a randomly generated OTP.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://capex.me/assets/b-share.png">
+  </head>
 <body>
   <div class="jumbotron">
     <h3><%- message %></h3>
