--- a/read/views/wiki.ejs
+++ b/read/views/wiki.ejs
@@ -1,11 +1,11 @@
 <html>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
   <head>
-    <title>C-Apex - Home</title>
+    <title>C-Apex -- Read</title>
     <meta property="og:title" content="C-Apex">
     <meta property="og:site_name" content="">
     <meta property="og:url" content="">
-    <meta property="og:description" content="Welcome to my corner of the internet.">
+    <meta property="og:description" content="A page with my rants and ramblings.">
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://capex.me/assets/b-read.png">
   </head>
