--- a/main/views/home.ejs
+++ b/main/views/home.ejs
@@ -1,73 +1,56 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>C-Apex -- Home</title>
-  <meta property="og:type" content="article">
-  <meta property="og:title" content="C-Apex -- Home">
-  <meta property="og:url" content="https://capex.me/">
-  <meta property="og:image" content="https://capex.me/assets/b-home.png">
-  <meta property="og:description" content="Welcome to my corner of the internet!">
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<body>
-    <div class="container">
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                    <img src="assets/share.png">
-                    <h3>Share</h3>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                    <p>Temporary file sharing that provides a direct link to the file and an OTP for immediate removal.<br>
-                      <i>Working implementation of A-Share</i></p>
-                        <a href="https://share.capex.me">Open</a>
-                        <a href="https://github.com/c-apex/A-Share">GitHub</a>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                    <img src="assets/read.png">
-                    <h3>Read</h3>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                  <p>A simple knowledgebase I've turned into the home for my longer "rants."<br>
-                    <i>Working implementation of A-Wiki</i></p>
-                        <a href="https://read.capex.me">Go</a>
-                        <a href="https://github.com/c-apex/A-Wiki">GitHub</a>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                  <img src="assets/bot.png">
-                    <h3>Bot</h3>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                    <p>My Discord bot, completely customizable with features useful to any community.</p>
-                        <a href="https://github.com/c-apex/A-Bot">GitHub</a>
-                </div>
-            </div>
-        </div>
-    </div>
-  <div class="footer">
-    <small><p>Icons by <b>Freepik</b> and <b>Those Icons</b> on <b><a href="https://www.flaticon.com">FlatIcon</a></b></p>
-    <p>Site by <b>Jhonier Riascos Zapata</b> on <b><a href="https://codepen.io/Jhonierpc/pen/MWgBJpy">CodePen</a></b></p></small>
-  </div>
-</body>
-<!-- partial -->
-  
-</body>
+<html>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="main.css" rel="stylesheet" type="text/css"/>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <head>
+    <title>C-Apex - Home</title>
+    <link rel="icon" href="logo.png">
+    <meta property="og:title" content="C-Apex">
+    <meta property="og:site_name" content="">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="Welcome to my corner of the internet.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://capex.me/assets/b-main.png">
+  </head>
+  <body>
+    <div id=wrapper>
+      <h1 class="text-center">Hello, I'm a user who goes by <b>Apex</b>.</h1>
+      <div id="break">
+        <img class="text-center" src="https://capex.me/assets/apex.png" alt="C-Apex Character" width="250" height="250">
+      </div>
+      <div>
+        <br>
+        <h3 class="text-center">Welcome to my side of the internet!</h3>
+        <hr class="strong">
+        <a href="https://share.capex.me" class="text-center text-dark"><h1><b>A-Share</b></h1></a>
+          <p class="text-center">Temporary file sharing that provides a direct link to the file and an OTP for immediate removal.</p>
+          <br>
+        <a href="https://github.com/c-apex/A-Share" class="text-center text-muted"><h3>Source Code</h3></a>
+          </p>
+        <hr class="strong">
+          <a href="https://github.com/c-apex" class="text-center text-dark"><h1><b>GitHub</b></h1></a>
+          <a href="mailto:apex@capex.me?subject=[capex.me]:" class="text-center text-dark"><h1><b>Email Me</b></h1></a>
+        <br>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
+        <script>
+          VANTA.TOPOLOGY({
+            el: "#break",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            scale: 1.00,
+            scaleMobile: 1.00,
+            color: 0x0,
+            backgroundColor: 0xFFFFFF
+          })
+        </script>
+        </script>
+  </body>
+      </div>
+        <footer>
+          <p class="text-center text-muted"><small>(c) C-Apex 2022</small></p>
+        </footer>
 </html>
